# nRF-Beehavior-Firmware

./: .gitignore  README.md
Thingy52_GATT/: CMakeLists.txt  prj.conf
Thingy52_GATT/src/: main.c
nRF53/: CMakeLists.txt  Kconfig  README.rst  overlay-low-power.conf  prj.conf  readMe.txt  todo.txt
nRF53/Combined_nRF53_cp/: CMakeLists.txt  Kconfig  prj.conf
nRF53/Combined_nRF53_cp/boards/: thingy53_nrf5340_cpuapp.conf
nRF53/Combined_nRF53_cp/src/: main.c
nRF53/Combined_nRF53_cp/src/events/: CMakeLists.txt  bee_count_event.c  ble_event.c  ble_event.h  bm_w_event.c  bm_w_event.h  thingy_event.c  thingy_event.h
nRF53/Combined_nRF53_cp/src/led/: led.c  led.h
nRF53/Combined_nRF53_cp/src/modules/: CMakeLists.txt  Kconfig.app_module  ble_module.c  bm_w_module.c  central_module.c  central_module.h  modules_common.c  peripheral_module.c  thingy_module.c
nRF53/Combined_nRF53_cp/src/watchdog/: readme.rst
nRF53/Thingy_To_nRF5340/: CMakeLists.txt  README.rst
nRF53/Thingy_To_nRF5340/src/: main.c
nRF53/boards/: nrf5340dk_nrf5340_cpuapp.overlay  nrf5340dk_nrf5340_cpuapp_ns.conf  nrf5340dk_nrf5340_cpuapp_ns.overlay  thingy53.c  thingy53_nrf5340_cpuapp.conf  thingy53_nrf5340_cpuapp.overlay
nRF53/child_image/: hci_rpmsg.conf
nRF53/multirole/: README.rst
nRF53/multirole/src/: main.c
nRF53/old_submodules/Peripheral_nRF53_To_nRF91/src/: main.c
nRF53/old_submodules/Thingy_To_nRF5340/: prj.conf
nRF53/old_submodules/multirole/: Kconfig
nRF53/scan_for_broodminder/: README.rst  prj.conf
nRF53/scan_for_broodminder/src/: main.c
nRF53/src/: main.c
nRF53/src/battery/: CMakeLists.txt  battery.c
nRF53/src/events/: CMakeLists.txt  bee_count_event.c  bee_count_event.h  ble_event.c  ble_event.h  bm_w_event.c  bm_w_event.h  nvs_event.h  thingy_event.c  thingy_event.h  thingy_matrix_event.c  thingy_matrix_event.h  wdt_event.c  wdt_event.h  woodpecker_event.c  woodpecker_event.h
nRF53/src/led/: CMakeLists.txt
nRF53/src/modules/: CMakeLists.txt  bee_counter_module.c  ble_module.c  central_module.c  central_module.h  modules_common.c  nvs_module.c  nvs_module.h  peripheral_module.c  peripheral_module.h  scan_module.c  swarm_detection_module.c  tempCodeRunnerFile.c  thingy_module.c  thingy_module.h  wdt_module.c  wdt_module.h  woodpecker_module.c
nRF91/: .gitignore  CMakeLists.txt  Kconfig  overlay-low-power.conf  prj.conf  readme.rst  spm.conf
nRF91/boards/: nrf9160dk_nrf9160_ns.conf  nrf9160dk_nrf9160_ns.overlay  thingy91_nrf9160_ns.conf  thingy91_nrf9160_ns.overlay  thingy91_nrf9160ns.conf  thingy91_nrf9160ns.overlay
nRF91/src/: main.c
nRF91/src/cert/: Sertigo(AAA).cer  telephone.cer  test.cer
nRF91/src/cloud/: nrf_cloud_integration.c
nRF91/src/events/: CMakeLists.txt  ble_event.c  ble_event.h  cloud_event.c  cloud_event.h  nvs_event.c  nvs_event.h  sms_event.c  sms_event.h  wdt_event.h
nRF91/src/include/: nvs.h
nRF91/src/modules/: CMakeLists.txt  Kconfig.cloud_module  ble_module.c  cloud_module.c  fota_support.c  https_client_module.c  modules_common.c  modules_common.h  nvs_module.c  nvs_module.h  post_module.c  sms_module.c  wdt_module.c  wdt_module.h
sms/: Kconfig  (+1 more)
v2.0Woodpecker/: CMakeLists.txt  app.overlay  prj.conf  release.conf  sample.yaml
v2.0Woodpecker/boards/: nrf5340dk_nrf5340_cpuapp.overlay  thingy53_nrf5340_cpuapp_ns.conf
v2.0Woodpecker/model-parameters/: dsp_blocks.h  model_metadata.h
v2.0Woodpecker/src/: main.c  main.cpp  mic.c
v2.0Woodpecker/src/Modules/: CMakeLists.txt
v2.0Woodpecker/src/include/: ble.h  input_data.h  mic.h
v2.0Woodpecker/src/modules/: CMakeLists.txt  ble.c  mic.c
v2.0Woodpecker/tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
(+347 files in other folders)
